// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`EventList should render empty state 1`] = `
<div>
  <div>
    <p
      class="text-base-content/40 mb-2 text-[10px] font-normal tracking-widest uppercase"
    >
      Events
    </p>
    <p
      class="text-base-content/25 text-xs"
    >
      No events on this date.
    </p>
  </div>
</div>
`;

exports[`EventList should render events 1`] = `
<div>
  <div>
    <p
      class="text-base-content/40 mb-2 text-[10px] font-normal tracking-widest uppercase"
    >
      Events
    </p>
    <div
      class="flex flex-col gap-2"
    >
      <div
        class="bg-base-content/5 border-base-content/10 rounded-lg border px-2 py-1.5 text-[11px] leading-snug"
      >
        <p
          class="text-base-content font-normal"
        >
          New Year
        </p>
        <p
          class="text-base-content/50 mt-0.5 text-[10px]"
        >
          Public Holiday
        </p>
      </div>
      <div
        class="bg-base-content/5 border-base-content/10 rounded-lg border px-2 py-1.5 text-[11px] leading-snug"
      >
        <p
          class="text-base-content font-normal"
        >
          Test Event
        </p>
        <p
          class="text-base-content/50 mt-0.5 text-[10px]"
        >
          Test Field
        </p>
      </div>
    </div>
  </div>
</div>
`;
